--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -818,7 +818,7 @@
 				<source>Use Custom Left Arrow</source>
 			</trans-unit>
 			<trans-unit id="flexform.thumb_arrowRight">
-				<source>Use Custom Left Arrow</source>
+				<source>Use Custom Right Arrow</source>
 			</trans-unit>
 			<trans-unit id="flexform.fullScreen_enabled">
 				<source>Fullscreen functions enabled</source>
